tests/baselines/reference/parserConstructorDeclaration11.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration11.ts(2,15): error TS1092: Type parameters cannot appear on a constructor declaration.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration11.ts (1 errors) ====
    class C {
      constructor<>() { }
                  
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
    }